hphp/hack/test/typecheck/reactive/owned_mutable15.php.exp
File "owned_mutable15.php", line 6, characters 12-50:
Parameter cannot have both `__OwnedMutable` and `__MaybeMutable` annotations. (Parsing[1002])
